--- a/.github/workflows/AutoSignin.yml
+++ b/.github/workflows/AutoSignin.yml
@@ -1,7 +1,7 @@
 name: AutoCheckin
 
 on: 
-  workflow_dispatch:
+  # workflow_dispatch:
   release:
     types: [published]
   push:
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    # if: github.event.repository.owner.id == github.event.sender.id  # 自己点的 start
+    if: github.event.repository.owner.id == github.event.sender.id  # 自己点的 start
     steps:
     - name: Checkout
       uses: actions/checkout@master
